bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:10: error: type mismatch;
 found   : Int(200)
 required: Boolean
    if (210 >= n + 10 >= 200 || n - 10 == 100) {
                         ^